--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,7 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes: ['bootstrap_3_layout.html.twig']
 
 # Doctrine Configuration
 doctrine:
@@ -76,3 +77,9 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user"
+
+assetic:
+    debug:          '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
