--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/translation": "^4.1",
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
+        "symfony/web-server-bundle": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
