--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
         "symfony/translation": "^4.1",
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
-        "symfony/web-server-bundle": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "^4.1"
     },
     "config": {
         "preferred-install": {
